--- a/intro/homework.ipynb
+++ b/intro/homework.ipynb
@@ -1,19 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "93cc9c98-f0a7-4932-a78f-af4f74fa00c2",
+   "cell_type": "markdown",
+   "id": "b888aef1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "### Homework 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8223a7b1",
+   "execution_count": 76,
+   "id": "1c7d95a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "20cdf789",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +31,7 @@
        "'2.2.3'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3b0ead6c-fa11-4cc1-a7ac-3de247a4a188",
+   "execution_count": 78,
+   "id": "8731487a",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +117,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "3ffe6dfd-832f-47b0-8e69-e16b141ebd00",
+       "ref": "9248bb2c-1155-4113-b2d9-a0306f3b5942",
        "rows": [
         [
          "0",
@@ -1113,7 +1122,7 @@
        "[2160 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,8 +1134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3623825e",
+   "execution_count": 79,
+   "id": "8ec4a420",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1148,7 @@
        "       'Toshiba'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,8 +1159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7ffea2bc",
+   "execution_count": 80,
+   "id": "184590e1",
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1169,7 @@
        "27"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,8 +1181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ba7c3264",
+   "execution_count": 81,
+   "id": "cab35d40",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1203,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,8 +1215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8213b08b",
+   "execution_count": 82,
+   "id": "bddd731f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,8 +1226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "9c19b9ec",
+   "execution_count": 83,
+   "id": "fc874a4f",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1236,7 @@
        "np.float64(7150.47)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,8 +1248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "500f393c",
+   "execution_count": 84,
+   "id": "90b0626a",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1258,7 @@
        "np.float64(15.6)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,22 +1270,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "name": "python"
   }
  },
  "nbformat": 4,
