Update the notebook and README.md

--- a/car_price_prediction/regression.ipynb
+++ b/car_price_prediction/regression.ipynb
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "52e78b5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars = pd.read_csv('data.csv')"
+    "cars = pd.read_csv('cars.csv')"
    ]
   },
   {
