Add a python script for model training that saves the model and also predict.py

--- a/car_price_prediction/regression.ipynb
+++ b/car_price_prediction/regression.ipynb
@@ -9385,6 +9385,62 @@
    "source": [
     "The actual value is 2000 while the predicted value is 3593. It seems that more features should be included in the model for a closer prediction. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728f3604",
+   "metadata": {},
+   "source": [
+    "## Saving the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62d5968b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "# Save the model\n",
+    "with open('linear_regression_model.pkl', 'wb') as f_out:\n",
+    "    pickle.dump((w0, w, categories), f_out)\n",
+    "# Load the model\n",
+    "with open('linear_regression_model.pkl', 'rb') as f_in:\n",
+    "    w0_loaded, w_loaded = pickle.load(f_in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "41bdc99c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(6.341042938427814),\n",
+       " array([ 1.53554878e-03,  1.17819253e-01, -7.06954632e-03, -5.69878974e-03,\n",
+       "        -5.13958628e-05, -9.63459485e-02, -7.71642336e-01, -8.99813993e-01,\n",
+       "        -6.27608709e-01, -5.23664922e-02,  1.72582722e-01, -7.38798063e-03,\n",
+       "        -9.28101741e-02, -9.72433428e-02, -4.74011046e-01,  8.05661360e-02,\n",
+       "        -3.09299040e-01, -5.41235970e-01, -8.91453992e-02,  1.08152015e+00,\n",
+       "         8.95292028e-01,  1.13944774e+00,  2.69713352e+00,  5.24663111e-01,\n",
+       "         1.63834341e+00,  1.53669824e+00,  1.62702373e+00,  1.53866707e+00,\n",
+       "        -8.99827907e-02,  4.12915030e-02, -5.55006193e-02, -2.67733151e-02,\n",
+       "        -5.85248319e-03,  2.19249942e+00,  2.08048092e+00,  2.06759705e+00,\n",
+       "        -4.97396374e-02,  4.30669503e-02,  1.68650890e-01,  3.03368619e-01,\n",
+       "        -1.48495467e-01]))"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w0_loaded, w_loaded"
+   ]
   }
  ],
  "metadata": {
