Export and save predict_test.ipynb as a python script predict_test.py

--- a/car_price_prediction/predict_test.ipynb
+++ b/car_price_prediction/predict_test.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "I can only use WSGI server, so I will use gunicorn.\n",
     "And I used this command `gunicorn --bind 0.0.0.0:9696 predict:app`\n",
-    "But gunicorn doesn't work on Windows. gunicorn uses Linux specific features. Instead, I will use waitress: `pip install waitress`"
+    "gunicorn doesn't work on Windows because it uses Linux specific features. Instead, I will use waitress: `pip install waitress`"
    ]
   },
   {
